--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Latihan Git</title>
 </head>
 <body>
+
+    <header>ini ada header</header>
     
 <h1>PT Cinta Sejati</h1>
 
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur expedita possimus facilis dicta officiis voluptatum sint autem ex, numquam nesciunt quaerat eius ipsam odit vero nihil earum quod accusamus distinctio!</div>
+
+    <footer>ini adalah footer</footer>
 
 </body>
 </html>
